--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,12 +1,9 @@
-# This is a basic workflow to help you get started with Actions
-
 name: Jupyter
-
-# Controls when the workflow will run
 on:
   push:
     branches: [master]
 jobs:
+  build:
     runs-on: ubuntu-latest
     steps:
     -name: Checkout
