--- a/.github/workflows/222.yml
+++ b/.github/workflows/222.yml
@@ -13,7 +13,7 @@ jobs:
     - name: Install Dependencies # Установка зависимостей для Jupyter
       run: pip install -r requirments.txt
     - name: Exeute Notebook # Выполнение тетрадки Jupyter
-      run: jupyter-nbconvert --execute DZ1.ipynb --to html
+      run: jupyter nbconvert --execute DZ1.ipynb --to html
     - name: Upload a Build Artifact # Выгрузка вывода тетрадки (артефакта задания) в html файл
       uses: actions/upload-artifact@v3.1.0
       with:
